Bug 342668 - Kmail Crash on Close
Summary: Kmail Crash on Close
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git (master)
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2015-01-09 19:21 UTC by zezadas
Modified: 2015-01-23 22:04 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description zezadas 2015-01-09 19:21:12 UTC
Application: kmail (4.73 pre)
 (Compiled from sources)
Qt Version: 5.4.0
Operating System: Linux 3.17.6-1-ARCH x86_64
Distribution: "Arch Linux"

-- Information about the crash:
Kmail crash on close
It wont happen if systray option is enabled (maybe because it wont "close" and it is keeped background)

The crash can be reproduced every time.

-- Backtrace:
Application: KMail (kmail), signal: Segmentation fault
Using host libthread_db library "/usr/lib/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f345c1f0840 (LWP 30765))]

Thread 11 (Thread 0x7f345aeeb700 (LWP 30766)):
#0  0x00007f346b8b444d in poll () from /usr/lib/libc.so.6
#1  0x00007f346446e9f2 in ?? () from /usr/lib/libxcb.so.1
#2  0x00007f346447056f in xcb_wait_for_event () from /usr/lib/libxcb.so.1
#3  0x00007f345bfd4389 in ?? () from /usr/lib/qt/plugins/platforms/libqxcb.so
#4  0x00007f346c445ece in ?? () from /usr/lib/libQt5Core.so.5
#5  0x00007f346aed2314 in start_thread () from /usr/lib/libpthread.so.0
#6  0x00007f346b8bd24d in clone () from /usr/lib/libc.so.6

Thread 10 (Thread 0x7f3452975700 (LWP 30769)):
#0  0x00007f346944d019 in g_mutex_lock () from /usr/lib/libglib-2.0.so.0
#1  0x00007f3469408229 in g_main_context_prepare () from /usr/lib/libglib-2.0.so.0
#2  0x00007f3469408bbb in ?? () from /usr/lib/libglib-2.0.so.0
#3  0x00007f3469408dac in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#4  0x00007f346c687cbc in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#5  0x00007f346c62e162 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#6  0x00007f346c440f44 in QThread::exec() () from /usr/lib/libQt5Core.so.5
#7  0x00007f346c445ece in ?? () from /usr/lib/libQt5Core.so.5
#8  0x00007f346aed2314 in start_thread () from /usr/lib/libpthread.so.0
#9  0x00007f346b8bd24d in clone () from /usr/lib/libc.so.6

Thread 9 (Thread 0x7f34520d3700 (LWP 30770)):
#0  0x00007f346aed78cf in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f3479784b70 in ?? () from /usr/lib/libQt5WebKit.so.5
#2  0x00007f3479784b99 in ?? () from /usr/lib/libQt5WebKit.so.5
#3  0x00007f346aed2314 in start_thread () from /usr/lib/libpthread.so.0
#4  0x00007f346b8bd24d in clone () from /usr/lib/libc.so.6

Thread 8 (Thread 0x7f340bffd700 (LWP 30771)):
#0  0x00007f346aed78cf in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f3479487bfd in ?? () from /usr/lib/libQt5WebKit.so.5
#2  0x00007f34797b5451 in ?? () from /usr/lib/libQt5WebKit.so.5
#3  0x00007f346aed2314 in start_thread () from /usr/lib/libpthread.so.0
#4  0x00007f346b8bd24d in clone () from /usr/lib/libc.so.6

Thread 7 (Thread 0x7f340b7fc700 (LWP 30772)):
#0  0x00007f346aed78cf in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f3479488c13 in ?? () from /usr/lib/libQt5WebKit.so.5
#2  0x00007f34797b5451 in ?? () from /usr/lib/libQt5WebKit.so.5
#3  0x00007f346aed2314 in start_thread () from /usr/lib/libpthread.so.0
#4  0x00007f346b8bd24d in clone () from /usr/lib/libc.so.6

Thread 6 (Thread 0x7f340affb700 (LWP 30773)):
#0  0x00007f346aed78cf in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f3479488c13 in ?? () from /usr/lib/libQt5WebKit.so.5
#2  0x00007f34797b5451 in ?? () from /usr/lib/libQt5WebKit.so.5
#3  0x00007f346aed2314 in start_thread () from /usr/lib/libpthread.so.0
#4  0x00007f346b8bd24d in clone () from /usr/lib/libc.so.6

Thread 5 (Thread 0x7f340a7fa700 (LWP 30774)):
#0  0x00007f346aed78cf in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f3479488c13 in ?? () from /usr/lib/libQt5WebKit.so.5
#2  0x00007f34797b5451 in ?? () from /usr/lib/libQt5WebKit.so.5
#3  0x00007f346aed2314 in start_thread () from /usr/lib/libpthread.so.0
#4  0x00007f346b8bd24d in clone () from /usr/lib/libc.so.6

Thread 4 (Thread 0x7f3409ff9700 (LWP 30775)):
#0  0x00007f346aed78cf in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f3479488c13 in ?? () from /usr/lib/libQt5WebKit.so.5
#2  0x00007f34797b5451 in ?? () from /usr/lib/libQt5WebKit.so.5
#3  0x00007f346aed2314 in start_thread () from /usr/lib/libpthread.so.0
#4  0x00007f346b8bd24d in clone () from /usr/lib/libc.so.6

Thread 3 (Thread 0x7f34097f8700 (LWP 30776)):
#0  0x00007f346aed78cf in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f3479488c13 in ?? () from /usr/lib/libQt5WebKit.so.5
#2  0x00007f34797b5451 in ?? () from /usr/lib/libQt5WebKit.so.5
#3  0x00007f346aed2314 in start_thread () from /usr/lib/libpthread.so.0
#4  0x00007f346b8bd24d in clone () from /usr/lib/libc.so.6

Thread 2 (Thread 0x7f3408ff7700 (LWP 30777)):
#0  0x00007f346aed78cf in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f3479488c13 in ?? () from /usr/lib/libQt5WebKit.so.5
#2  0x00007f34797b5451 in ?? () from /usr/lib/libQt5WebKit.so.5
#3  0x00007f346aed2314 in start_thread () from /usr/lib/libpthread.so.0
#4  0x00007f346b8bd24d in clone () from /usr/lib/libc.so.6

Thread 1 (Thread 0x7f345c1f0840 (LWP 30765)):
[KCrash Handler]
#5  0x0000000000000000 in ?? ()
#6  0x00007f346e6a8b30 in QTreeView::expandAll() () from /usr/lib/libQt5Widgets.so.5
#7  0x00007f347c6d290e in ?? () from /usr/lib/libmessageviewer.so.5
#8  0x00007f347c6d2757 in ?? () from /usr/lib/libmessageviewer.so.5
#9  0x00007f347c6d264d in ?? () from /usr/lib/libmessageviewer.so.5
#10 0x00007f346c65f8fa in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/libQt5Core.so.5
#11 0x00007f346c5d3dc9 in QAbstractItemModel::endResetModel() () from /usr/lib/libQt5Core.so.5
#12 0x00007f347c66e6c2 in ?? () from /usr/lib/libmessageviewer.so.5
#13 0x00007f347c66d989 in ?? () from /usr/lib/libmessageviewer.so.5
#14 0x00007f347c6d1fd3 in ?? () from /usr/lib/libmessageviewer.so.5
#15 0x00007f347c6d1f8c in ?? () from /usr/lib/libmessageviewer.so.5
#16 0x00007f347c6d288b in ?? () from /usr/lib/libmessageviewer.so.5
#17 0x00007f347c6d2713 in ?? () from /usr/lib/libmessageviewer.so.5
#18 0x00007f347c6d2577 in ?? () from /usr/lib/libmessageviewer.so.5
#19 0x00007f346c65f8fa in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/libQt5Core.so.5
#20 0x00007f346c66069f in QObject::destroyed(QObject*) () from /usr/lib/libQt5Core.so.5
#21 0x00007f346e4451a8 in QWidget::~QWidget() () from /usr/lib/libQt5Widgets.so.5
#22 0x00007f347c6d1d6a in ?? () from /usr/lib/libmessageviewer.so.5
#23 0x00007f347c6d1da2 in ?? () from /usr/lib/libmessageviewer.so.5
#24 0x00007f346c65e76c in QObjectPrivate::deleteChildren() () from /usr/lib/libQt5Core.so.5
#25 0x00007f346e44520a in QWidget::~QWidget() () from /usr/lib/libQt5Widgets.so.5
#26 0x00007f346e59ea09 in QSplitter::~QSplitter() () from /usr/lib/libQt5Widgets.so.5
#27 0x00007f346c65e76c in QObjectPrivate::deleteChildren() () from /usr/lib/libQt5Core.so.5
#28 0x00007f346e44520a in QWidget::~QWidget() () from /usr/lib/libQt5Widgets.so.5
#29 0x00007f347c6a27f2 in MessageViewer::Viewer::~Viewer() () from /usr/lib/libmessageviewer.so.5
#30 0x00007f347c6a2828 in MessageViewer::Viewer::~Viewer() () from /usr/lib/libmessageviewer.so.5
#31 0x00007f346c65e76c in QObjectPrivate::deleteChildren() () from /usr/lib/libQt5Core.so.5
#32 0x00007f346e44520a in QWidget::~QWidget() () from /usr/lib/libQt5Widgets.so.5
#33 0x00007f347e7e94b4 in ?? () from /usr/lib/libkmailprivate.so.5
#34 0x00007f347e7e94ec in ?? () from /usr/lib/libkmailprivate.so.5
#35 0x00007f346c65e76c in QObjectPrivate::deleteChildren() () from /usr/lib/libQt5Core.so.5
#36 0x00007f346e44520a in QWidget::~QWidget() () from /usr/lib/libQt5Widgets.so.5
#37 0x00007f346e59ea09 in QSplitter::~QSplitter() () from /usr/lib/libQt5Widgets.so.5
#38 0x00007f346c65e76c in QObjectPrivate::deleteChildren() () from /usr/lib/libQt5Core.so.5
#39 0x00007f346e44520a in QWidget::~QWidget() () from /usr/lib/libQt5Widgets.so.5
#40 0x00007f346e59ea09 in QSplitter::~QSplitter() () from /usr/lib/libQt5Widgets.so.5
#41 0x00007f347e8303f5 in KMMainWidget::deleteWidgets() () from /usr/lib/libkmailprivate.so.5
#42 0x00007f347e82de90 in KMMainWidget::destruct() () from /usr/lib/libkmailprivate.so.5
#43 0x00007f347e82dce0 in KMMainWidget::~KMMainWidget() () from /usr/lib/libkmailprivate.so.5
#44 0x00007f347e82ddfc in KMMainWidget::~KMMainWidget() () from /usr/lib/libkmailprivate.so.5
#45 0x00007f346c65e76c in QObjectPrivate::deleteChildren() () from /usr/lib/libQt5Core.so.5
#46 0x00007f346e44520a in QWidget::~QWidget() () from /usr/lib/libQt5Widgets.so.5
#47 0x00007f347e7e4bdc in ?? () from /usr/lib/libkmailprivate.so.5
#48 0x00007f347e7e4c42 in ?? () from /usr/lib/libkmailprivate.so.5
#49 0x00007f346c661128 in QObject::event(QEvent*) () from /usr/lib/libQt5Core.so.5
#50 0x00007f346e448ff7 in QWidget::event(QEvent*) () from /usr/lib/libQt5Widgets.so.5
#51 0x00007f346e55ca3b in QMainWindow::event(QEvent*) () from /usr/lib/libQt5Widgets.so.5
#52 0x00007f34711a2b0a in KMainWindow::event(QEvent*) () from /usr/lib/libKF5XmlGui.so.5
#53 0x00007f34711eb9e5 in KXmlGuiWindow::event(QEvent*) () from /usr/lib/libKF5XmlGui.so.5
#54 0x00007f346e405d5c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQt5Widgets.so.5
#55 0x00007f346e40b340 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQt5Widgets.so.5
#56 0x00007f346c6306cb in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQt5Core.so.5
#57 0x00007f346c63270b in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /usr/lib/libQt5Core.so.5
#58 0x00007f346c6878b3 in ?? () from /usr/lib/libQt5Core.so.5
#59 0x00007f3469408a0d in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#60 0x00007f3469408cf8 in ?? () from /usr/lib/libglib-2.0.so.0
#61 0x00007f3469408dac in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#62 0x00007f346c687ca7 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#63 0x00007f346c62e162 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#64 0x00007f346c635b3c in QCoreApplication::exec() () from /usr/lib/libQt5Core.so.5
#65 0x0000000000404d44 in main ()

Reported using DrKonqi
Comment 1 Christoph Feck 2015-01-10 17:31:32 UTC
The Qt5/KF5 version of KMail has not been released yet, please do not use it.
Comment 2 Laurent Montel 2015-01-23 22:04:54 UTC
Git commit cb586e14cc6e2cbe695ccc6af4acfb75b155d9b2 by Montel Laurent.
Committed on 23/01/2015 at 22:04.
Pushed by mlaurent into branch 'master'.

Fix Bug 342668 - Kmail Crash on Close

M  +1    -0    messageviewer/viewer/mimeparttreeview.cpp

http://commits.kde.org/kdepim/cb586e14cc6e2cbe695ccc6af4acfb75b155d9b2