Fix Bug 342668 - Kmail Crash on Close

BUG: 342668